<resources>

    <string name="app_name">智通</string>
    <string name="weburl">http://www.ztdx.hk/call20/</string>
    <string name="appver">1.5</string>
    <string name="app_cid">zhitong</string>
    <string name="app_aid">0</string>
    <string name="title_activity_main">智通</string>
    <string name="login_title">账号登录</string>
    <string name="login_foget_pwd">忘记密码？</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_new_reg">新用户注册</string>
    <string name="register_title">账号注册</string>
    <string name="register_title_sh">去电显本机号码或隐藏号码</string>
    <string name="register_title_t">提交</string>
    <string name="fgpwd_title">找回密码</string>
    <string name="register_title_2">获取验证码</string>
    <string name="register_title_2_h">显示或隐藏</string>
    <string name="register_acount_hint">请输入手机号码</string>
    <string name="register_acount_hint_a">您的账号</string>
    <string name="register_acount_hint_s">请输入验证码</string>
    <string name="register_acount_tips">账户不能包含特殊字符,长度必须大于6位并且小于15</string>
    <string name="register_acount_tips_1">提示：注册账号就是您的手机号哦。</string>
    <string name="register_pwd_hint">输入密码</string>
    <string name="register_pwd_hint_a">新密码</string>
    <string name="register_repwd_hint">确认密码</string>
    <string name="register_agree_user_protocol">同意用户协议</string>
    <string name="register_check_user_tips">正在验证账号是否可用……</string>
    <string name="register_check_user_failtrue1">账号不能包含特殊字符</string>
    <string name="register_check_user_failtrue2">账号长度必须大于6位小于15位</string>
    <string name="register_check_user_failtrue3">账号已经存在</string>
    <string name="back">返回</string>
    <string name="call_title">应用中心</string>
    <string name="more">更多设置</string>
</resources>