<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/reg_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/bg_topbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/contact_detail_topbar_btn_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/bind_return_btn" android:background="@drawable/reg_return" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/contact_detail_topbar_btn_left" android:text="@string/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="mback"/>
        <TextView android:textSize="24.0dip" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="找回密码" android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView android:textSize="12.0dip" android:textColor="@color/darkblue" android:id="@id/TextView01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/register_acount_tips_1" />
    <TextView android:textSize="12.0dip" android:textColor="@color/darkblue" android:id="@id/register_acount_tips" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" />
    <EditText android:layout_gravity="center" android:id="@+id/fpassname" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/register_acount_hint" android:singleLine="true" android:maxLength="20" android:drawableLeft="@drawable/reg_name_icon" android:drawablePadding="8.0dip" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:layout_gravity="center" android:id="@+id/fpassyzm" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="170.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/register_acount_hint_s" android:singleLine="true" android:maxLength="20" android:drawablePadding="8.0dip" />
        <Button android:textSize="20.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/fpassyzmok" android:background="@drawable/login_btn_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginLeft="190.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/register_title_2" android:onClick="fpassyzmoks"/>
    </RelativeLayout>
    <EditText android:layout_gravity="center" android:id="@+id/fpass1" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/register_pwd_hint" android:singleLine="true" android:maxLength="20" android:drawableLeft="@drawable/reg_pwd_icon" android:drawablePadding="8.0dip" android:inputType="textPassword" />
    <EditText android:layout_gravity="center" android:id="@+id/fpass2" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/register_repwd_hint" android:singleLine="true" android:maxLength="20" android:drawableLeft="@drawable/reg_pwd_icon" android:drawablePadding="8.0dip" android:inputType="textPassword" />
    <Button android:textSize="20.0dip" android:textColor="@color/white" android:gravity="center" android:id="@+id/fpassok" android:background="@drawable/login_btn_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="50.0dip" android:text="确认找回" android:onClick="fpassoks"/>
</LinearLayout>
