<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/reg_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0dip" android:textColor="@color/white" android:gravity="center" android:background="@drawable/bg_topbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_title" />
    <EditText android:id="@id/login_name" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:hint="@string/login_name_hint" android:singleLine="true" android:drawableLeft="@drawable/login_name_icon" android:drawablePadding="8.0dip" />
    <EditText android:id="@id/login_pwd" android:background="@drawable/reg_edittext" android:paddingLeft="10.0dip" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:hint="@string/login_pwd_hint" android:singleLine="true" android:drawableLeft="@drawable/login_pwd_icon" android:drawablePadding="8.0dip" android:inputType="textPassword" />

     <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dip">
        <CheckBox android:textColor="#ff4682b4" android:id="@id/register_cb_protocol" android:layout_width="27.0dip" android:layout_height="27.0dip" android:checked="true" style="@style/RegCheckBox" />
        <TextView android:textSize="16.0dip" android:textColor="@color/darkblue" android:id="@+id/reloginok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="记住账号" android:layout_toRightOf="@id/register_cb_protocol" android:layout_centerVertical="true" />
    </RelativeLayout>

    <TextView
        android:id="@id/login_foget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="5.0dip"
        android:clickable="true"
        android:onClick="fpass"
        android:text="@string/login_foget_pwd"
        android:textColor="@color/darkblue"
        android:textSize="18.0dip" />

    <Button android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/login_btn" android:background="@drawable/login_btn_bg" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="50.0dip" android:text="@string/login_title" android:onClick="login_btns"/>
    <Button android:textSize="18.0dip" android:textColor="@color/black" android:gravity="center" android:id="@id/login_reg_btn" android:background="@drawable/login_reg_btn_bg" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="50.0dip" android:text="@string/login_new_reg" android:onClick="login_reg_btns"/>
</LinearLayout>
